# PDF-Reader-using-LangChain-and-Streamlit

./: README.md  app.py  document.txt  pyproject.toml  requirements.txt
